version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/DBlockCommand.rst.txt
.. vale off



:class:`DBlockCommand`
======================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.DBlockCommand(iDBlockCommandObj: Ansys.Common.Interop.FEParsePlugin_ANSYS.IDBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a DBlock command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: DBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~NodalLoads`
            - Get the element surface loads.
          * - :py:attr:`~NodalLoadsCount`
            - Gets the number of element surface loads.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: NodalLoads
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandNodalLoad]]


   
   Get the element surface loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: NodalLoadsCount
   :type: Optional[int]


   
   Gets the number of element surface loads.
















   ..
       !! processed by numpydoc !!







.. vale on